Add a lot of class.

--- a/HairMate/appsettings.json
+++ b/HairMate/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=HairMate;User Id=SebastianLiszewski;Password=Kałamarnica967@@@;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=HairMate;User Id=SebastianLiszewski;Password=AdminAdmin;"
   },
   "Logging": {
     "LogLevel": {
