--- a/HairMate/HairMate.csproj
+++ b/HairMate/HairMate.csproj
@@ -8,12 +8,54 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Identity\**" />
+    <Content Remove="Areas\Identity\**" />
+    <EmbeddedResource Remove="Areas\Identity\**" />
+    <None Remove="Areas\Identity\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Areas\ChangePassword.cshtml.cs" />
+    <Compile Remove="Areas\Email.cshtml.cs" />
+    <Compile Remove="Areas\IdentityHostingStartup.cs" />
+    <Compile Remove="Areas\Index.cshtml.cs" />
+    <Compile Remove="Areas\Login.cshtml.cs" />
+    <Compile Remove="Areas\ManageNavPages.cs" />
+    <Compile Remove="Areas\Register.cshtml.cs" />
+    <Compile Remove="Areas\ResetPassword.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Areas\ChangePassword.cshtml" />
+    <Content Remove="Areas\Email.cshtml" />
+    <Content Remove="Areas\Index.cshtml" />
+    <Content Remove="Areas\Login.cshtml" />
+    <Content Remove="Areas\Register.cshtml" />
+    <Content Remove="Areas\ResetPassword.cshtml" />
+    <Content Remove="Areas\_ManageNav.cshtml" />
+    <Content Remove="Areas\_StatusMessage.cshtml" />
+    <Content Remove="Areas\_ValidationScriptsPartial.cshtml" />
+    <Content Remove="Areas\_ViewImports.cshtml" />
+    <Content Remove="Areas\_ViewStart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Areas\Identity\IdentityHostingStartup.cs" />
+    <Compile Include="Areas\Identity\Pages\Account\Login.cshtml.cs" />
+    <Compile Include="Areas\Identity\Pages\Account\Register.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.30" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.30" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.28" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.29" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.30" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.29" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.30" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.28" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
@@ -21,6 +63,19 @@
   <ItemGroup>
     <ProjectReference Include="..\HairMate.Application\HairMate.Application.csproj" />
     <ProjectReference Include="..\HairMate.Infrastructure\HairMate.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\logos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Areas\Identity\Pages\Account\Login.cshtml" />
+    <None Include="Areas\Identity\Pages\Account\Register.cshtml" />
+    <None Include="Areas\Identity\Pages\Account\_ViewImports.cshtml" />
+    <None Include="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
+    <None Include="Areas\Identity\Pages\_ViewImports.cshtml" />
+    <None Include="Areas\Identity\Pages\_ViewStart.cshtml" />
   </ItemGroup>
 
 </Project>
